--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\css\Login\vendor\" />
+    <Folder Include="wwwroot\Uploads\Posts\" />
   </ItemGroup>
 
 </Project>
